@@ -851,6 +851,8 @@
       - Update extras/MySQL_AST_CREATE_tables.sql.
     * Add missing /etc/mysql to backup:
       - Update bin/ADMIN_backup_ng.pl.
+    * Pulldown menue only with active agents:
+      - Update www/vicidial/AST_agent_performance_detail.php.
     * Change next release to 3.0.1.
 
 2.26.29
